--- a/iot_jsp/WebContent/html/form.html
+++ b/iot_jsp/WebContent/html/form.html
@@ -63,13 +63,13 @@ function checkValue(fobj){
 
 </script>
 <body>
-<form method="get" action="./location.html" onsubmit="return checkValue(this)">
+<form method="get" action="./login_ok.jsp" onsubmit="return checkValue(this)">
 	<h2 id="hText">로그인</h2>
-	ID : <input type="text" name="id" id="userId" data-val="5" data-msg="아이디 입력하세용 ㅎㅎ"><br>
-	Password : <input type="password" name="pwd" id="userPwd" data-val="5" data-msg="비밀번호 입력하세용 ㄲㄲ"><br>
+	ID : <input type="text" name="userId" id="userId" data-val="4" data-msg="아이디 입력하세용 ㅎㅎ"><br>
+	Password : <input type="password" name="userPwd" id="userPwd" data-val="4" data-msg="비밀번호 입력하세용 ㄲㄲ"><br>
 	
 	<input type="submit" id="loginBtn" value="Login">		
-
+	
 </form>
 </body>
 </html>
